# MiniGCS

./: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
data/: telemetry_sample.json
qml/panels/: MapPanel.qml  TelemetryPanel.qml
src/common/: telemetrydata.h
src/controllers/: dashboardcontroller.cpp  dashboardcontroller.h  telemetrycontroller.cpp  telemetrycontroller.h  videocontroller.cpp  videocontroller.h
src/models/: telemetrymodel.cpp  telemetrymodel.h
src/sources/: itelemetrysource.h  jsontelemetrysource.cpp  jsontelemetrysource.h  telemetrysourcefactory.cpp  telemetrysourcefactory.h
src/workers/: telemetryworker.cpp  telemetryworker.h
